Projects/netflix-clone/k8s/app/database-mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-mongodb-service
  namespace: netflix-clone
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  clusterIP: None  

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: netflix-mongodb
  namespace: netflix-clone
spec:
  serviceName: "netflix-mongodb-service"
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:8.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongodb-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "standard"
        resources:
          requests:
            storage: 5Gi
