Projects/netflix-clone/k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-service
  namespace: netflix-clone
spec:
  selector:
    app: netflix-clone
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
