Projects/netflix-clone/k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-ingress
  namespace: netflix-clone
spec:
  rules:
  - host: netflix-clone.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netflix-service
            port:
              number: 80
